--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,5 @@
 language: php
-
-sudo: false
+os: linux
 dist: trusty
 
 addons:
@@ -17,86 +16,65 @@ cache:
     - $HOME/.npm
 
 php:
- - 7.0
- - 7.1
- - 7.3
-
-matrix:
-  exclude:
-  - php: 7.0
-    env: DB=pgsql MOODLE_BRANCH=master
-  - php: 7.0
-    env: DB=mysqli MOODLE_BRANCH=master
-  - php: 7.0
-    env: DB=pgsql MOODLE_BRANCH=MOODLE_37_STABLE
-  - php: 7.0
-    env: DB=mysqli MOODLE_BRANCH=MOODLE_37_STABLE
-  - php: 7.0
-    env: DB=pgsql MOODLE_BRANCH=MOODLE_38_STABLE
-  - php: 7.0
-    env: DB=mysqli MOODLE_BRANCH=MOODLE_38_STABLE
-  - php: 7.3
-    env: DB=pgsql MOODLE_BRANCH=MOODLE_35_STABLE
-  - php: 7.3
-    env: DB=mysqli MOODLE_BRANCH=MOODLE_35_STABLE
-  fast_finish: true
+  - 7.2
+  - 7.3
+  - 7.4
 
 env:
- global:
-  - BEHAT=yes
-  - MUSTACHE_IGNORE_NAMES="email_html_body.mustache, email_html.mustache, email_text.mustache"
- matrix:
-  - DB=pgsql MOODLE_BRANCH=MOODLE_35_STABLE
-  - DB=pgsql MOODLE_BRANCH=MOODLE_36_STABLE
-  - DB=pgsql MOODLE_BRANCH=MOODLE_37_STABLE
-  - DB=pgsql MOODLE_BRANCH=MOODLE_38_STABLE
-  - DB=pgsql MOODLE_BRANCH=master
-  - DB=mysqli MOODLE_BRANCH=MOODLE_35_STABLE
-  - DB=mysqli MOODLE_BRANCH=MOODLE_36_STABLE
-  - DB=mysqli MOODLE_BRANCH=MOODLE_37_STABLE
-  - DB=mysqli MOODLE_BRANCH=MOODLE_38_STABLE
-  - DB=mysqli MOODLE_BRANCH=master
+  global:
+    - BEHAT=yes
+    - MUSTACHE_IGNORE_NAMES="email_html_body.mustache, email_html.mustache, email_text.mustache"
+  jobs:
+    - DB=pgsql MOODLE_BRANCH=MOODLE_35_STABLE
+    - DB=pgsql MOODLE_BRANCH=MOODLE_37_STABLE
+    - DB=pgsql MOODLE_BRANCH=MOODLE_38_STABLE
+    #- DB=pgsql MOODLE_BRANCH=MOODLE_39_STABLE
+    - DB=pgsql MOODLE_BRANCH=master
+    - DB=mysqli MOODLE_BRANCH=MOODLE_35_STABLE
+    - DB=mysqli MOODLE_BRANCH=MOODLE_37_STABLE
+    - DB=mysqli MOODLE_BRANCH=MOODLE_38_STABLE
+    #- DB=mysqli MOODLE_BRANCH=MOODLE_39_STABLE
+    - DB=mysqli MOODLE_BRANCH=master
 
 before_install:
   - phpenv config-rm xdebug.ini
-  - nvm install v8.9.4
+  - nvm install v14
   - cd ../..
   - composer selfupdate
   - composer create-project -n --no-dev --prefer-dist moodlerooms/moodle-plugin-ci ci ^2
   - export PATH="$(cd ci/bin; pwd):$(cd ci/vendor/bin; pwd):$PATH"
 
 jobs:
+  fast_finish: true
   include:
     # Prechecks against latest Moodle stable only.
     - stage: static
-      php: 7.3
-      env: DB=mysqli MOODLE_BRANCH=MOODLE_37_STABLE
+      php: 7.4
+      env: DB=mysqli MOODLE_BRANCH=MOODLE_38_STABLE # TODO 39
       install:
-      - moodle-plugin-ci install --no-init
+        - moodle-plugin-ci install --no-init
       script:
-      - moodle-plugin-ci phplint
-      - moodle-plugin-ci phpcpd
-      - moodle-plugin-ci phpmd
-      - moodle-plugin-ci codechecker
-      - moodle-plugin-ci validate
-      - moodle-plugin-ci savepoints
-      - moodle-plugin-ci mustache
-      - moodle-plugin-ci grunt || [ "$MOODLE_BRANCH" = 'master' ]
-
+        - moodle-plugin-ci phplint
+        - moodle-plugin-ci phpcpd
+        - moodle-plugin-ci phpmd
+        - moodle-plugin-ci codechecker
+        - moodle-plugin-ci validate
+        - moodle-plugin-ci savepoints
+        - moodle-plugin-ci mustache
+        - moodle-plugin-ci grunt || [ "$MOODLE_BRANCH" = 'master' ]
     # Smaller build matrix for development builds
     - stage: develop
-      php: 7.3
-      env: DB=mysqli MOODLE_BRANCH=MOODLE_37_STABLE
+      php: 7.4
+      env: DB=mysqli MOODLE_BRANCH=MOODLE_38_STABLE # TODO 39
       install:
-      - moodle-plugin-ci install
+        - moodle-plugin-ci install
       script:
-      - moodle-plugin-ci phpunit --coverage-clover
-      - moodle-plugin-ci behat
+        - moodle-plugin-ci phpunit --coverage-clover
+        - moodle-plugin-ci behat
 
 # Default 'test' stage: Unit tests and behat tests against full matrix.
 install:
   - moodle-plugin-ci install
-
 script:
   - moodle-plugin-ci phpunit --coverage-clover
   - moodle-plugin-ci behat
