--- a/.travis.yml
+++ b/.travis.yml
@@ -50,7 +50,7 @@ jobs:
     # Prechecks against latest Moodle stable only.
     - stage: static
       php: 7.4
-      env: DB=mysqli MOODLE_BRANCH=MOODLE_38_STABLE # TODO 39
+      env: DB=mysqli MOODLE_BRANCH=master # TODO 39
       install:
         - moodle-plugin-ci install --no-init
       script:
@@ -61,16 +61,29 @@ jobs:
         - moodle-plugin-ci validate
         - moodle-plugin-ci savepoints
         - moodle-plugin-ci mustache
-        - moodle-plugin-ci grunt || [ "$MOODLE_BRANCH" = 'master' ]
+        - moodle-plugin-ci grunt
     # Smaller build matrix for development builds
     - stage: develop
       php: 7.4
-      env: DB=mysqli MOODLE_BRANCH=MOODLE_38_STABLE # TODO 39
+      env: DB=mysqli MOODLE_BRANCH=master # TODO 39
       install:
         - moodle-plugin-ci install
       script:
         - moodle-plugin-ci phpunit --coverage-clover
         - moodle-plugin-ci behat
+  exclude:
+    - php: 7.3
+      env: DB=pgsql MOODLE_BRANCH=MOODLE_35_STABLE
+    - php: 7.3
+      env: DB=mysqli MOODLE_BRANCH=MOODLE_35_STABLE
+    - php: 7.4
+      env: DB=pgsql MOODLE_BRANCH=MOODLE_35_STABLE
+    - php: 7.4
+      env: DB=mysqli MOODLE_BRANCH=MOODLE_35_STABLE
+    - php: 7.4
+      env: DB=pgsql MOODLE_BRANCH=MOODLE_37_STABLE
+    - php: 7.4
+      env: DB=mysqli MOODLE_BRANCH=MOODLE_37_STABLE
 
 # Default 'test' stage: Unit tests and behat tests against full matrix.
 install:
