Add php_gd and php_zip extension

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,8 @@ addons:
     packages:
       - oracle-java9-installer
       - oracle-java9-set-default
+      - php-gd
+      - php-zip
 
 cache:
   directories:
