--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,12 @@
 language: php
 os: linux
+dist: xenial
 
 addons:
   firefox: "47.0.1"
   postgresql: "9.4"
   apt:
     packages:
-      - openjdk-9-jre
 
 services:
   - mysql
