--- a/.travis.yml
+++ b/.travis.yml
@@ -5,11 +5,10 @@ dist: xenial
 addons:
   firefox: "47.0.1"
   postgresql: "9.4"
-  apt:
-    packages:
 
-services:
-  - mysql
+services: mysql
+
+jdk: openjdk9
 
 cache:
   directories:
@@ -38,6 +37,7 @@ env:
     - DB=mysqli MOODLE_BRANCH=master
 
 before_install:
+  - jdk_switcher use openjdk9
   - phpenv config-rm xdebug.ini
   - nvm install v14
   - cd ../..
