--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,6 @@ addons:
 
 services: mysql
 
-jdk: openjdk9
-
 cache:
   directories:
     - $HOME/.composer/cache
@@ -37,7 +35,7 @@ env:
     - DB=mysqli MOODLE_BRANCH=master
 
 before_install:
-  - jdk_switcher use openjdk9
+  - java --version
   - phpenv config-rm xdebug.ini
   - nvm install v14
   - cd ../..
