--- a/.travis.yml
+++ b/.travis.yml
@@ -38,8 +38,8 @@ env:
     - DB=mysqli MOODLE_BRANCH=master
 
 before_install:
+  - sudo update-alternatives --config java
   - export JAVA_HOME=$HOME/openjdk9
-  - $TRAVIS_BUILD_DIR/install-jdk.sh --install openjdk9 --target $JAVA_HOME
   - java --version
   - phpenv config-rm xdebug.ini
   - nvm install v14
