--- a/.travis.yml
+++ b/.travis.yml
@@ -39,6 +39,8 @@ env:
 before_install:
   - pwd
   - update-alternatives --list java
+  - ls /usr/lib/jvm/
+  - echo $PATH
   - java --version
   - phpenv config-rm xdebug.ini
   - nvm install v14
