--- a/.travis.yml
+++ b/.travis.yml
@@ -37,11 +37,12 @@ env:
     - DB=mysqli MOODLE_BRANCH=master
 
 before_install:
+  - export JAVA_HOME=$HOME/openjdk9
+  - install-jdk.sh --install openjdk9 --target $JAVA_HOME
   - pwd
   - update-alternatives --list java
   - ls /usr/lib/jvm/
   - echo $PATH
-  - install-jdk.sh
   - java --version
   - phpenv config-rm xdebug.ini
   - nvm install v14
