--- a/.travis.yml
+++ b/.travis.yml
@@ -39,7 +39,7 @@ env:
 before_install:
   - ls /usr/local/lib/jvm/
   - export PATH=$(echo "$PATH" | sed -e 's/:\/usr\/local\/lib\/jvm\/openjdk11\/bin//')
-  #- JAVA_HOME=/usr/lib/jvm/java-1.8.0-openjdk-amd64
+  - JAVA_HOME=/usr/lib/jvm/java-1.8.0-openjdk-amd64
   - pwd
   - update-alternatives --list java
   - ls /usr/lib/jvm/
