--- a/.travis.yml
+++ b/.travis.yml
@@ -40,6 +40,7 @@ before_install:
   - ls /usr/local/lib/jvm/
   - export PATH=$(echo "$PATH" | sed -e 's/:\/usr\/local\/lib\/jvm\/openjdk11\/bin//')
   - JAVA_HOME=/usr/lib/jvm/java-1.8.0-openjdk-amd64
+  - export PATH="${JAVA_HOME}/bin/:$PATH"
   - pwd
   - update-alternatives --list java
   - ls /usr/lib/jvm/
