--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,6 @@ dist: xenial
 addons:
   firefox: "47.0.1"
   postgresql: "9.4"
-  apt:
-    - openjdk-8-jre
 
 services: mysql
 
@@ -37,13 +35,11 @@ env:
     - DB=mysqli MOODLE_BRANCH=master
 
 before_install:
-  - JAVA_HOME=/usr/lib/jvm/java-1.8.0-openjdk-amd64
-  - export PATH="${JAVA_HOME}/bin:$(echo "$PATH" | sed -e 's/:\/usr\/local\/lib\/jvm\/openjdk11\/bin//')"
   - phpenv config-rm xdebug.ini
   - nvm install v14
   - cd ../..
   - composer selfupdate
-  - composer create-project -n --no-dev --prefer-dist blackboard-open-source/moodle-plugin-ci ci ^2
+  - composer create-project -n --no-dev --prefer-dist blackboard-open-source/moodle-plugin-ci ci dev-master
   - export PATH="$(cd ci/bin; pwd):$(cd ci/vendor/bin; pwd):$PATH"
 
 jobs:
