--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,6 @@ cache:
     - $HOME/.npm
 
 php:
-  - 7.2
   - 7.3
   - 7.4
 
@@ -24,15 +23,13 @@ env:
     - BEHAT=yes
     - MUSTACHE_IGNORE_NAMES="email_html_body.mustache, email_html.mustache, email_text.mustache"
   jobs:
-    - DB=pgsql MOODLE_BRANCH=MOODLE_35_STABLE
-    - DB=pgsql MOODLE_BRANCH=MOODLE_38_STABLE
     - DB=pgsql MOODLE_BRANCH=MOODLE_39_STABLE
     - DB=pgsql MOODLE_BRANCH=MOODLE_310_STABLE
+    - DB=pgsql MOODLE_BRANCH=MOODLE_311_STABLE
     - DB=pgsql MOODLE_BRANCH=master
-    - DB=mysqli MOODLE_BRANCH=MOODLE_35_STABLE
-    - DB=mysqli MOODLE_BRANCH=MOODLE_38_STABLE
     - DB=mysqli MOODLE_BRANCH=MOODLE_39_STABLE
     - DB=mysqli MOODLE_BRANCH=MOODLE_310_STABLE
+    - DB=mysqli MOODLE_BRANCH=MOODLE_311_STABLE
     - DB=mysqli MOODLE_BRANCH=master
 
 before_install:
@@ -48,7 +45,7 @@ jobs:
     # Prechecks against latest Moodle stable only.
     - stage: static
       php: 7.4
-      env: DB=mysqli MOODLE_BRANCH=MOODLE_310_STABLE
+      env: DB=mysqli MOODLE_BRANCH=MOODLE_311_STABLE
       install:
         - moodle-plugin-ci install --no-init
       script:
@@ -63,16 +60,10 @@ jobs:
     # Smaller build matrix for development builds
     - stage: develop
       php: 7.4
-      env: DB=mysqli MOODLE_BRANCH=MOODLE_310_STABLE
-  exclude:
-    - php: 7.3
-      env: DB=pgsql MOODLE_BRANCH=MOODLE_35_STABLE
-    - php: 7.3
-      env: DB=mysqli MOODLE_BRANCH=MOODLE_35_STABLE
-    - php: 7.4
-      env: DB=pgsql MOODLE_BRANCH=MOODLE_35_STABLE
-    - php: 7.4
-      env: DB=mysqli MOODLE_BRANCH=MOODLE_35_STABLE
+      env: DB=mysqli MOODLE_BRANCH=MOODLE_311_STABLE
+  allow_failures:
+    - env: DB=pgsql MOODLE_BRANCH=master
+    - env: DB=mysqli MOODLE_BRANCH=master
 
 # Default 'test' stage: Unit tests and behat tests against full matrix.
 install:
